# go-mvtssr

./: AGENTS.md  CMakeLists.txt  README.md  bound_options.go  camera_options.go  file_source.go  file_source_manager.go  geo.go  go.mod  headless_frontend.go  image.go  map.go  map_observer.go  map_options.go  mbgl.go  mbgl_darwin.go  mbgl_link.go  mbgl_link_linux_egl.go  mbgl_link_linux_glx.go  mbgl_link_windows.go  mbgl_test.go  resource.go  resource_options.go  runloop.go  snapshotter.go  style.go  tilecache.go  tiler.go
lib/: mvtssr_c_api.h
src/: CMakeLists.txt  mvtssr_c_api.cc  mvtssr_c_api.h
